--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div id="wrapper">
             <header>
                 <h1>
-                    JavaJam Coffee House
+                    TARUMT
                 </h1>
             </header>
     
