--- a/music.html
+++ b/music.html
@@ -9,7 +9,7 @@
     <div id="wrapper">
         <header>
             <h1>
-                JavaJam Coffee House
+                TARUMT
             </h1>
         </header>
     
