--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-		<title>JavaJam Coffee House</title>
+		<title>Homahai</title>
         <link rel="stylesheet" href="javajam.css" >
     </head>
     <body>
